--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@
   text-align: center;
 }
 
-
-
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -14,4 +11,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.calculator {
+  border: 2px solid red;
+
+  height:60vh;
+}
+
+.screen {
+  border: 2px solid red;
+
+  margin: 8px;
 }
