--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,16 @@
 
 .numbers {
   border: 2px solid yellow;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
 }
+
+
 
 .operators {
   border: 2px solid green;
 }
 
-.operators {
-  border: 2px solid green;
-}
