--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
 
   height:60vh;
   width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .screen {
