--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   width: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 4px;
 }
 
@@ -35,6 +35,7 @@
   border: 2px solid orange;
 
   padding: 10px;
+  margin: 8px;
 
   display: grid;
   grid-template-columns: repeat(4, 1fr);
